# human-instrumentality

./: README.md  pyproject.toml  tasks.md
docs/: feature_overview.md  runbook.md
numpy/: __init__.py
persona/: __init__.py  audio.py  cli.py  denoise.py  denoiser.py  discord_integration.py  embeddings.py  emotion.py  llm.py  memory.py  models.py  narrative.py  pipeline.py  planner.py  sentiment.py  state.py  stt.py  tts.py  vad.py
tests/: test_audio.py  test_cli.py  test_discord_pipeline.py  test_discord_sessions.py  test_embeddings.py  test_llm.py  test_memory.py  test_models.py  test_narrative.py  test_pipeline.py  test_state.py  test_stt.py  test_vad.py
