[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "human-instrumentality"
version = "0.1.0"
description = "Local voice persona pipeline"
authors = [{name = "Human Instrumentality"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "transformers>=4.39",
    "datasets>=2.18",
    "torch>=2.2",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
